# designers_kit

./: .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  designers-kit.code-workspace  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.cjs  tailwind.config.js  tailwind.config.ts  tsconfig.json  ui.config.json  vite.config.ts
.github/workflows/: deploy-docs.yml  deploy-website.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  firebase-hosting-stage-merge.yml  firebase-hosting-stage-pull-request.yml  server.ci.yml
.github/workflows/server/: ci.yml
.storybook/: preview.js
appwrite/: template.appwrite.json
appwrite/scripts/: README.md
appwrite/scripts/init/: appwrite_cli_push_schema.js  create_user.php  generate_schema.cjs
appwrite/scripts/random_id/: id.cjs
client/: .env.example  index.html  package.json  tsconfig.json
client/.storybook/: main.js
client/src/: App.css  index.tsx
client/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
docs/: .gitignore  firebase.json  package.json
docs/.firebase/: hosting.YnVpbGQ.cache
server/: .env.defaults.example  .gitignore  package.json  template.appwrite.json  vitest.config.js
server/scripts/: .gitignore  README.md
server/tests/: scripts.integration.test.js  setup.js
src/: App.tsx  app.html  app.pcss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/commands/file_explorer/: query.rs
src-tauri/src/converters/: mod.rs
src-tauri/src/file_explorer/: check_app_config.rs  compress_item.rs  copy_paste.rs  create_file.rs  create_folder.rs  delete_item.rs  extract_item.rs  get_current_dir.rs  go_back.rs  go_home.rs  go_to_dir.rs  list_dirs.rs  list_disks.rs  mod.rs  open_dir.rs  open_in_terminal.rs  open_item.rs  rename_element.rs  save_config.rs  search_for.rs  set_dir.rs  switch_to_directory.rs  switch_view.rs
src-tauri/src/utils/: mod.rs
src/components/: sum.test.js  test.test.tsx
src/lib/: WindowPanel.svelte  WindowPanelRight.svelte  WindowSidebar.svelte  WindowTitleBar.svelte
src/pages/: Home.tsx  Login.tsx  Productivity.tsx
src/routes/: +layout.svelte  +page.svelte
src/store/: authStore.ts  store.ts  taskStore.ts  todoStore.ts
src/types/: auth.d.ts  tasks.d.ts
website/: .firebaserc  .gitignore  firebase.json  package.json  vite.config.ts
website/src/: main.tsx
(+79 files in other folders)
