[package]
name = "designers-toolkit"
version = "0.1.0"
description = "Toolkit for day-to-day designer tasks."
authors = ["you"]
license = ""
repository = ""
default-run = "designers-toolkit"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.3", features = [] }
chrono = "0.4.31"
dialog = "0.3.0"
get_sys_info = "0.1.21"
rar = "0.2.0"
rust_search = "2.1.0"
stopwatch = "0.0.7"
unrar = "0.5.2"
zip = "0.6.6"
zip-extensions = "0.6.2"
poppler-utils-rs = { path = "/Users/dylanbertram/Dev/projects_opensource/rs-crates/poppler-utils-rs" }
thiserror = "1.0.52"
serde_json = "1.0"
copy_dir = "0.1.3"
open = "5.0.1"
sevenz-rust = "0.5.4"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
